# getm-rewrite

./: .gitignore  .gitmodules  .readthedocs.yml  .travis.yml  .travis.yml_not_working  CMakeLists.txt  README.md  TODO  environment-min.yml  environment-readthedocs.yml  environment.yml  install  postBuild
.binder/: environment.yml  postBuild
.github/workflows/: getm.yml
conda.recipe/: bld.bat  build.sh  conda_build_config.yaml  meta.yaml  readme.md
doc/: README.md  function.template  getm2.md  getm_main.md  loms_main.md  loms_tests.md  module.template  subroutine.template
doc/code/: brunt_vaisala.md  velocity_diffusion.md  velocity_shear_frequency.md
doc/code/domain/: vertical_gvc.md  vertical_sigma.md
doc/code/dynamics/: .momentum_3d.md.swp  bottom_friction.md  bottom_friction_2d.md  bottom_friction_3d.md  ip_blumberg_mellor.md  ip_shchepetkin_mcwilliams.md  momentum.md  momentum_2d.md  momentum_3d.md  pk_3d.md  pressure_internal.md  qk_3d.md  u_2d.md  v_2d.md  w_momentum_3d.md
doc/code/operators/: advection.md  diffusion.md
doc/pages/: index.md
doc/pages/examples/: index.md  markus.md  marvin.md  sean.md
doc/pages/science/: getm_physics.md  index.md  test.md
doc/pages/technical/: index.md
doc/pages/users/: 01_installation.md  02_compilation.md  (+4 more)
include/: dimensions.h
python/: CMakeLists.txt  README.md  _pygetm.pyx  _pygotm.pyx  pygotm_wrapper.F90  setup.py  version.pxi.in  wrapper.F90
python/airsea/: CMakeLists.txt  _pyairsea.pyx  setup.py
python/airsea/examples/: formulations.ipynb
python/airsea/pyairsea/: __init__.py
python/airsea/src/: airsea.F90  airsea_2d.F90  airsea_fluxes.F90  airsea_variables.F90  albedo_water.F90  fairall.F90  humidity.F90  kara.F90  kondo.F90  longwave_radiation.F90  shortwave_radiation.F90  solar_zenith_angle.F90  t10m.F90
python/docs/: rerun_apidoc.bat
python/docs/source/: conf.py  index.rst
python/docs/source/api/: pygetm.airsea.rst  pygetm.constants.rst  pygetm.core.rst  pygetm.debug.rst  pygetm.density.rst  pygetm.domain.rst  pygetm.fabm.rst  pygetm.input.emodnet.rst  pygetm.input.rst  pygetm.input.tpxo.rst  pygetm.legacy.rst  pygetm.mixing.rst  pygetm.momentum.rst  pygetm.operators.rst  pygetm.output.netcdf.rst  pygetm.output.operators.rst  pygetm.output.rst  pygetm.parallel.rst  pygetm.radiation.rst  pygetm.rst  pygetm.simulation.rst  pygetm.subdiv.rst  pygetm.tracer.rst  pygetm.util.compare_nc.rst  pygetm.util.interpolate.rst  pygetm.util.rst
python/examples/: Kelvin_wave_in_a_channel.ipynb  airsea.ipynb  box_spherical.py  convert_getm_grid.py  gotm.ipynb  grids.ipynb  interpolation.ipynb  north_sea.py  north_sea.yaml  north_sea_legacy.py  northsea.ipynb  northsea.py  northsea_3d.ipynb  seamount.py  test_2d.ipynb  test_2d_periodic.ipynb  test_3d.ipynb  test_3d.py  test_advection.ipynb  test_fabm.ipynb  test_gotm_and_gsw.ipynb  test_lock_exchange.ipynb  test_parallel.py  test_parallel_advection.py
python/pygetm/: __init__.py  __main__.py  airsea.py  config.py  constants.py  core.py  debug.py  density.py  domain.py  fabm.py  ice.py  internal_pressure.py  legacy.py  mixing.py  momentum.py  open_boundaries.py  operators.py  parallel.py  radiation.py  run.py  simulation.py  subdiv.py  tracer.py
python/pygetm/input/: __init__.py  emodnet.py  era5.py  gotm.py  tpxo.py  woa.py
python/pygetm/input/util/: convert_ts.py
python/pygetm/output/: __init__.py  memory.py  netcdf.py
python/pygetm/output/operators/: __init__.py
python/pygetm/util/: compare_nc.py  interpolate.py
python/pylo/: __init__.py
python/src/: internal_pressure.F90  interpolation.F90  momentum.F90  radiation.F90  wrapper.F90
python/tests/: test_2d_flow_symmetry.py  test_2d_transport.py  test_3d_barotropic.py  test_coriolis.py  test_fabm.py  test_freshwater_fluxes.py  test_grid.py  test_ice.py  test_input.py  test_internal_pressure.py  test_interpolate.py  test_land.py  test_mode_convergence.py  test_output.py  test_parallel_advection.py  test_radiation.py  test_rivers.py  test_rotation.py  test_vertical_diffusion.py
src/: .editorconfig  CMakeLists.txt  getm.F90  main.F90
src/airsea/: CMakeLists.txt  airsea.F90
src/domain/: CMakeLists.txt  cfl_check.F90  depth_update.F90  domain.F90  domain.F90.keep  grids.F90  imetrics.F90  metrics.F90  mirror_bdys.F90  register.F90  tracer_bdys.F90  update_depths.F90  uv_depths.F90  uvx_depths.F90  vertical_adaptive.F90  vertical_coordinates.F90  vertical_gvc.F90  vertical_sigma.F90  x2uvc.F90
src/dynamics/: CMakeLists.txt  bottom_friction.F90  dynamics.F90  ip_blumberg_mellor.F90  ip_shchepetkin_mcwilliams.F90  momentum.F90  momentum_2d.F90  momentum_3d.F90  momentum_register.F90  pressure.F90  pressure_internal.F90  pressure_surface.F90  sealevel.F90  shear.F90  slow_bottom_friction.F90  slow_momentum_terms.F90  slow_terms.F90  uv_advection.F90  uv_coriolis.F90  uv_diffusion.F90  velocities.F90  velocity_diffusion.F90
src/input/: CMakeLists.txt  bathymetry.F90  input.F90
src/operators/: .diffusion.F90.swp  .getm_operators.F90.swp  CMakeLists.txt  advection.F90  advection.F90.template  advection_kb.F90  advection_knut.F90  advection_muscl.F90  advection_p2_pdm.F90  advection_splmax13.F90  advection_superbee.F90  advection_upstream.F90  diffusion.F90  diffusion.F90.keep  limiters.h  operators.F90  operators_kb.F90  operators_knut.F90
src/operators/advection_schemes/: advection.F90.template  advection.F90.template.LIMITERS  advection_base.F90  advection_hsimt.F90  advection_muscl.F90  advection_p2_pdm.F90  advection_splmax13.F90  advection_superbee.F90  advection_upstream.F90  limiters.h
src/output/: CMakeLists.txt  output.F90
src/parallel/: CMakeLists.txt  README  parallel.F90
src/physics/: CMakeLists.txt  density.F90  mixing.F90  physics.F90  radiation.F90  salinity.F90  temperature.F90  vertical_diffusion.F90
tests/: CMakeLists.txt  output.yaml.advection  output.yaml.diffusion  test_advection.F90  test_bathymetry.F90  test_density.F90  test_getm_domain.F90  test_parallel.F90  test_uv_depths.F90  test_uvx_depths.F90  test_vertical_coordinates.F90  test_vertical_diffusion.F90
(+8 files in other folders)
